# rag-eval-harness

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml
configs/: google_gemini.yaml  groq_llama4.yaml  ollama_local.yaml  openai.yaml
src/rag_eval/: __init__.py  __main__.py  chunker.py  cli.py  config.py  datasets.py  evaluator.py  indexer.py  reporter.py  runner.py  telemetry.py
src/rag_eval/providers/: __init__.py  embeddings.py  llm.py  reranker.py
src/rag_eval/strategies/: __init__.py  base.py  hybrid.py  hyde.py  multi_query.py  naive.py  rerank.py
tests/: conftest.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_smoke.py
